--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,12 +1,17 @@
 name: Swift
+
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-jobs: 
-	build:
+
+jobs:
+  build:
     name: Build app
     runs-on: macos-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Build
-        run: exec ./.github/build.sh
+    - uses: actions/checkout@v4
+    - name: Build
+      run: exec ./.github/build.sh
