--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
+    - uses: jdx/mise-action@v2
     - name: Build
+	  run: brew install swiftlint
       run: exec ./.github/build.sh
